Add input to noSlashTags

--- a/app/syntax/default.html
+++ b/app/syntax/default.html
@@ -25,6 +25,8 @@
       </a>
     </header>
     <!-- - Header -->
-    <main class="main"></main>
+    <main class="main">
+      <input type="checkbox" checked>
+    </main>
   </body>
 </html>
