Support for multi-line comments

--- a/app/syntax/default.html
+++ b/app/syntax/default.html
@@ -26,6 +26,8 @@
     </header>
     <!-- - Header -->
     <main class="main">
+      <!-- main content
+      input checkbox! -->
       <input type="checkbox" checked>
     </main>
   </body>
