--- a/app/syntax/default.html
+++ b/app/syntax/default.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jsxlike</title>
-    <link rel="stylesheet" href="/assets/bundle.css">
-    <style>
-      .header > .title {
-        color: red;
-      }
-    </style>
-    <script>
-      console.log("test")
-    </script>
+    <link rel="stylesheet" href="/assets/reset.css">
+    <link rel="stylesheet" href="/assets/base.css">
+    <link rel="stylesheet" href="/assets/parts.css">
+    <style>.title { color: red; }</style>
   </head>
   <body>
     <!-- + Header -->
@@ -26,9 +21,11 @@
     </header>
     <!-- - Header -->
     <main class="main">
-      <!-- main content
-      input checkbox! -->
+      <img src="/assets/images/thumb.png" width="80" height="80" alt="">
       <input type="checkbox" checked>
     </main>
+    <script src="/assets/common.js"></script>
+    <script src="/assets/animations.js"></script>
+    <script>console.log("test")</script>
   </body>
 </html>
