--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>jsxlike</title>
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <meta name="description" content="HTMLをReactのJSXにおおむね変換" />
+    <meta property="og:title" content="jsxlike" />
+    <meta property="og:description" content="HTMLをReactのJSXにおおむね変換" />
+    <meta property="og:url" content="https://jsxlike.qranoko.jp/" />
+    <meta
+      property="og:image"
+      content="https://jsxlike.qranoko.jp/apple-touch-icon.png"
+    />
+    <meta property="og:site_name" content="jsxlike" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@Qrac_JP" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
   <body>
     <div id="root"></div>
