--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>jsxlike</title>
+    <title>JSXlike</title>
     <meta name="description" content="HTMLをReactのJSXにおおむね変換" />
-    <meta property="og:title" content="jsxlike" />
+    <meta property="og:title" content="JSXlike" />
     <meta property="og:description" content="HTMLをReactのJSXにおおむね変換" />
     <meta property="og:url" content="https://jsxlike.qranoko.jp/" />
     <meta
       property="og:image"
       content="https://jsxlike.qranoko.jp/apple-touch-icon.png"
     />
-    <meta property="og:site_name" content="jsxlike" />
+    <meta property="og:site_name" content="JSXlike" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="@Qrac_JP" />
