--- a/src/demo.html
+++ b/src/demo.html
@@ -6,16 +6,15 @@
     <title>jsxlike</title>
     <link rel="stylesheet" href="/assets/reset.css">
     <link rel="stylesheet" href="/assets/base.css">
-    <link rel="stylesheet" href="/assets/parts.css">
     <style>.title { color: red; }</style>
   </head>
   <body>
     <!-- + Header -->
-    <header class="header">
+    <header class="header" style="background: url(/assets/images/header.jpg);">
       <h1 class="title">jsxlike</h1>
       <a href="/">
         <svg>
-          <use xlink:href="/assets/images/icons.svg#home"></use>
+          <use href="/assets/images/icons.svg#home"></use>
         </svg>
       </a>
     </header>
